base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
spec:
  selector:
    app: gitops-demo
  ports:
    - port: 80
      targetPort: 5000
